js/js.translator/testData/incremental/invalidation/fileNameCaseClash/lib/f2.1.kt
@file:JsFileName("f1")

package foo

fun test2() = "OK"